impl email register and login endpoints
bcrypt implemented
add to swagger
